Editor settings in

--- a/WLBDevEnv/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/WLBDevEnv/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1044,6 +1044,8 @@ MovieSceneCapture.TimeStamp=2022.01.18-23.19.54
 MovieSceneCapture.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.01.18-23.19.52
 ExternalImagePicker.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2022.01.18-23.19.52
+HierarchicalLODUtilities.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
